<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AdvisorsFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/advison1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:text="@string/jonathan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/gen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/advison2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:text="@string/sabur_khan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/df"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>